crates/openracing-ffb/tests/snapshots/snapshot_tests__constant_effect_default.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: "ConstantEffect::default()"
---
{
  "params": {
    "effect_type": "None",
    "duration_ms": 0,
    "gain": 0,
    "direction": 0
  },
  "magnitude": 0
}
