crates/openracing-ffb/tests/snapshots/snapshot_tests__constant_effect_typical.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: effect
---
{
  "params": {
    "effect_type": "Constant",
    "duration_ms": 0,
    "gain": 255,
    "direction": 0
  },
  "magnitude": 5000
}
