crates/openracing-ffb/tests/snapshots/snapshot_tests__damper_effect_typical.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: effect
---
{
  "params": {
    "effect_type": "Damper",
    "duration_ms": 0,
    "gain": 255,
    "direction": 0
  },
  "coefficient": 500
}
