crates/openracing-ffb/tests/snapshots/snapshot_tests__effect_params_default.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: "EffectParams::default()"
---
{
  "effect_type": "None",
  "duration_ms": 0,
  "gain": 0,
  "direction": 0
}
