crates/openracing-ffb/tests/snapshots/snapshot_tests__effect_type_default.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: "EffectType::default()"
---
"None"
