crates/openracing-ffb/tests/snapshots/snapshot_tests__ffb_direction_default.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: "FfbDirection::default()"
---
{
  "degrees": 0.0
}
