crates/openracing-ffb/tests/snapshots/snapshot_tests__ffb_gain_default.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: "FfbGain::default()"
---
{
  "overall": 0.0,
  "torque": 0.0,
  "effects": 0.0
}
