crates/openracing-ffb/tests/snapshots/snapshot_tests__ffb_gain_typical.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: gain
---
{
  "overall": 0.8,
  "torque": 0.9,
  "effects": 0.7
}
